--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           path: cypress/videos
       - store_artifacts:
           path: cypress/screenshots
-  build:
+  test:
     docker:
      - image: circleci/node:10-browsers
    steps:
@@ -50,3 +50,9 @@ jobs:
          command: npm test
      - store_artifacts:
           path: output
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test
